--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.application.name=student-transaction
-
+server.port=9001
 spring.main.banner-mode = off
-
+spring.security.debug=true
+debug=true
 #Database credentials
 
 spring.datasource.url = jdbc:mysql://localhost:3306/student_transaction_management
 spring.datasource.username = springstudent
 spring.datasource.password = springstudent
 
+common.threads=1000
 spring.jpa.show-sql=true
+realms=identitycommon
+authServerUrl=http://localhost:8080/
